--- a/index.html
+++ b/index.html
@@ -11,33 +11,41 @@
     <!-- Bootstrap icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
 
+    <!-- Fontawsome -->
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.css' integrity='sha512-tx5+1LWHez1QiaXlAyDwzdBTfDjX07GMapQoFTS74wkcPMsI3So0KYmFe6EHZjI8+eSG0ljBlAQc3PQ5BTaZtQ==' crossorigin='anonymous'/>
+
     <!-- My style sheet -->
     <link rel="stylesheet" href="./assets/css/style.css">
 
 </head>
 <body>
     <div class="dashboard container-fluid vh-100 p-0">
-
+        <!-- dashboard top -->
         <header class="dashboard_top d-flex">
-
             <nav class="navbar bg-body-tertiary w-100">
                 <div class="container-fluid flex-nowrap border">
+                    <!-- logo -->
                     <a class="navbar-brand d-lg-none" href="#">
                         <img src="./assets/img/mobile-logo.png" alt="Boolean" class="img-fluid" width="50">
                     </a>
+                    <!-- logo lg -->
                     <a class="navbar-brand d-none d-lg-block" href="#">
                         <img src="./assets/img/logo.svg" alt="Boolean" class="img-fluid" width="100px">
                     </a>
+                    <!-- input search -->
                     <form class="d-flex w-100" role="search">
                         <input class="form-control me-2" type="search" placeholder="&#128269;  Prova a cercare: Lezioni di Laravel" aria-label="Search">
                     </form>
+                    <!-- buttons -->
                     <div class="btn-group align-items-center gap-3">
-                        <i class="bi bi-list-ul text-body-secondary"></i>
-                        <i class="bi bi-question-circle-fill text-body-secondary"></i>
-                        <i class="bi bi-three-dots-vertical text-body-secondary"></i>
+                        <i class="bi bi-list-ul text-body-secondary d-none d-lg-block"></i>
+                        <i class="bi bi-question-circle-fill text-body-secondary d-none d-lg-block"></i>
+                        <i class="bi bi-three-dots-vertical text-body-secondary d-none d-lg-block"></i>
+                        <!-- button with dropdown -->
                         <button type="button" class="btn text-warning p-0" data-bs-toggle="dropdown" data-bs-display="static" aria-expanded="false">
-                        <i class="bi bi-bell-fill"></i>
+                            <i class="bi bi-bell-fill"></i>
                         </button>
+                        <!-- dropdown menu list -->
                         <ul class="dropdown-menu dropdown-menu">
                             <li><button class="dropdown-item" type="button">Action</button></li>
                             <li><button class="dropdown-item" type="button">Another action</button></li>
@@ -46,15 +54,23 @@
                     </div>
                 </div>
             </nav>
-
         </header>
 
+        <!-- dashboard bottom -->
         <main class="dashboard_bottom row mw-100 w-100 m-0">
-
-            <aside class="dashboard_bottom_left col-2 col-md-1">
-
+            <!-- aside nav -->
+            <aside class="dashboard_bottom_left col-2 col-md-1 text-white d-flex flex-column justify-content-between align-items-center pt-3">
+                <ul class="list-unstyled">
+                    <li><i class="bi bi-house-door-fill"></i> <span class="text-capitalize d-none d-lg-inline">home</span></li>
+                    <li class="my-2"><i class="fa-solid fa-chart-simple"></i> <span class="text-capitalize d-none d-lg-inline">stats</span></li>
+                    <li><i class="bi bi-reception-4"></i> <span class="text-capitalize d-none d-lg-inline">signals</span></li>
+                </ul>
+                <ul class="list-unstyled">
+                    <li><i class="bi bi-gear-fill"></i> <span class="text-capitalize d-none d-lg-inline">admin</span></li>
+                </ul>
             </aside>
 
+            <!-- dashboard body -->
             <div class="dashboard_bottom_right col-10 col-md-11 p-0">
                 <div class="dashboard_bottom_right_top border">
 
@@ -67,12 +83,6 @@
             </div>
 
         </main>
-
-
-
-
-
-
     </div>
 
 
