--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
         <!-- dashboard top -->
         <header class="dashboard_top d-flex">
             <nav class="navbar bg-body-tertiary w-100">
-                <div class="container-fluid flex-nowrap border">
+                <div class="container-fluid flex-nowrap border ps-2">
                     <!-- logo -->
                     <a class="navbar-brand d-lg-none" href="#">
-                        <img src="./assets/img/mobile-logo.png" alt="Boolean" class="img-fluid" width="50">
+                        <img src="./assets/img/mobile-logo.png" alt="Boolean" class="img-fluid" width="40" height="40">
                     </a>
                     <!-- logo lg -->
                     <a class="navbar-brand d-none d-lg-block" href="#">
-                        <img src="./assets/img/logo.svg" alt="Boolean" class="img-fluid" width="100px">
+                        <img src="./assets/img/logo.svg" alt="Boolean" class="img-fluid" width="">
                     </a>
                     <!-- input search -->
                     <form class="d-flex w-100" role="search">
@@ -46,7 +46,7 @@
                             <i class="bi bi-bell-fill"></i>
                         </button>
                         <!-- dropdown menu list -->
-                        <ul class="dropdown-menu dropdown-menu">
+                        <ul class="dropdown-menu dropdown-menu-end">
                             <li><button class="dropdown-item" type="button">Action</button></li>
                             <li><button class="dropdown-item" type="button">Another action</button></li>
                             <li><button class="dropdown-item" type="button">Something else here</button></li>
@@ -57,9 +57,9 @@
         </header>
 
         <!-- dashboard bottom -->
-        <main class="dashboard_bottom row mw-100 w-100 m-0">
+        <main class="dashboard_bottom d-flex mw-100 w-100 m-0">
             <!-- aside nav -->
-            <aside class="dashboard_bottom_left col-2 col-md-1 text-white d-flex flex-column justify-content-between align-items-center pt-3">
+            <!-- <aside class="dashboard_bottom_left col-2 col-md-1 text-white d-flex flex-column justify-content-between align-items-center pt-3">
                 <ul class="list-unstyled">
                     <li><i class="bi bi-house-door-fill"></i> <span class="text-capitalize d-none d-lg-inline">home</span></li>
                     <li class="my-2"><i class="fa-solid fa-chart-simple"></i> <span class="text-capitalize d-none d-lg-inline">stats</span></li>
@@ -68,11 +68,41 @@
                 <ul class="list-unstyled">
                     <li><i class="bi bi-gear-fill"></i> <span class="text-capitalize d-none d-lg-inline">admin</span></li>
                 </ul>
-            </aside>
+            </aside> -->
+
+            <!-- Correzione aside -->
+            <div class="side_bar d-flex flex-column flex-shrink-0" style="width: fit-content;">
+                <ul class="nav nav-pills nav-flush flex-column align-items-center mb-auto text-center">
+                  <li>
+                    <a href="#" class="nav-link mt-3 py-2 rounded-0 text-white d-flex align-items-center gap-2" aria-current="page" data-bs-toggle="tooltip" data-bs-placement="right" aria-label="Home" data-bs-original-title="Home">
+                        <i class="fa-solid fa-house"></i>
+                        <span class="d-none d-lg-inline text-capitalize">home</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#" class="nav-link py-2 rounded-0 text-white d-flex align-items-center gap-2" data-bs-toggle="tooltip" data-bs-placement="right" aria-label="Dashboard" data-bs-original-title="Dashboard">
+                        <i class="fa-solid fa-chart-simple"></i>
+                        <span class="d-none d-lg-inline text-capitalize">stats</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#" class="nav-link py-2 rounded-0 text-white d-flex align-items-center gap-2" data-bs-toggle="tooltip" data-bs-placement="right" aria-label="Orders" data-bs-original-title="Orders">
+                        <i class="fa-solid fa-signal"></i>
+                        <span class="d-none d-lg-inline text-capitalize">signals</span>
+                    </a>
+                  </li>
+                </ul>
+                <div class="">
+                  <a href="#" class="d-flex align-items-center gap-2 p-3 text-decoration-none text-white">
+                    <i class="fa-solid fa-gear"></i>
+                    <span class="d-none d-lg-inline text-capitalize">admin</span>
+                  </a>
+                </div>
+            </div>
 
             <!-- dashboard body -->
-            <div class="dashboard_bottom_right col-10 col-md-11 p-0">
-                <div class="dashboard_bottom_right_top border">
+            <div class="dashboard_bottom_right p-0 w-100">
+                <div class="dashboard_bottom_right_top border bg-primary text-white">
 
                 </div> 
                 
