--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <!-- dashboard body -->
             <div class="dashboard_bottom_right p-0 w-100">
                 <div class="dashboard_bottom_right_top row m-0 border bg-primary text-white">
-                    <div class="col-12 col-md-4 order-md-1 d-flex align-items-start pt-3 gap-3 border">
+                    <div class="col-12 col-md-4 order-md-1 d-flex align-items-start pt-3 gap-3">
                         <span class="text-capitalize">nuovo studente</span>
                         <button class="btn btn-primary border" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">+</button>
 
@@ -181,10 +181,23 @@
                         </div>
 
                     </div>
-                    <div class="col-12 col-md-4 border">
+                    <div class="col-12 col-md-4 pt-3">
+                        <nav style="--bs-breadcrumb-divider: '&Gt;';" aria-label="breadcrumb">
+                            <ol style=" --bs-breadcrumb-divider-color: white;" class="breadcrumb align-items-center m-0">
+                              <li class="breadcrumb-item"><a href="#" class="text-decoration-none text-capitalize fs-3 text-white">boolean</a></li>
+                              <li class="breadcrumb-item active" aria-current="page"><span class="badge rounded-pill text-bg-dark bg-opacity-25">Piano blaze</span></li>
+                            </ol>
+                            <ol style=" --bs-breadcrumb-divider-color: white;" class="breadcrumb align-items-center">
+                                <li class="breadcrumb-item active" aria-current="page"><span class="badge rounded-pill text-bg-dark bg-opacity-25">3 app</span></li>
+                                <li class="breadcrumb-item active" aria-current="page"><span class="badge rounded-pill text-bg-dark bg-opacity-25 d-lg-none">+</span></li>
+                                <span class="badge rounded-pill text-bg-dark bg-opacity-25 d-none d-lg-inline">Boolean mobile app</span>
+                                <span class="badge rounded-pill text-bg-dark bg-opacity-25 mx-2 d-none d-lg-inline">Boolean web app</span>
+                                <span class="badge rounded-pill text-bg-dark bg-opacity-25 d-none d-lg-inline">Boolean blog app</span>
+                            </ol>
 
+                        </nav>
                     </div>
-                    <div class="col-12 col-md-4 border">
+                    <div class="col-12 col-md-4 pt-3">
 
                     </div>
                 </div> 
