--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             </div>
 
             <!-- dashboard body -->
-            <div class="dashboard_bottom_right p-0 w-100">
+            <div class="dashboard_bottom_right p-0 w-100 overflow-auto">
                 <div class="dashboard_bottom_right_top row m-0 border bg-primary text-white">
                     <div class="col-12 col-md-4 col-lg-3 order-md-1 d-flex align-items-start pt-3 gap-3">
                         <span class="text-capitalize">nuovo studente</span>
@@ -341,9 +341,52 @@
 
                             </div>
                         </div>
+
+                        <div class="faq card mt-3">
+                            <div class="card-header">
+                                <h5 class="card-title text-uppercase">f.a.q</h5>
+                            </div>
+                            <div class="card-body">
+                                <div class="accordion accordion-flush" id="accordionFlushExample">
+                                    <div class="accordion-item">
+                                      <h2 class="accordion-header">
+                                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                                          Come aggiungere un nuovo studente?
+                                        </button>
+                                      </h2>
+                                      <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                                        <div class="accordion-body">Clicca sul + in alto nella sezione blu.</div>
+                                      </div>
+                                    </div>
+                                    <div class="accordion-item">
+                                      <h2 class="accordion-header">
+                                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                                          Come posso accedere alle informazioni del mio account?
+                                        </button>
+                                      </h2>
+                                      <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                                        <div class="accordion-body">Clicca sull'icona della campanella.</div>
+                                      </div>
+                                    </div>
+                                    <div class="accordion-item">
+                                      <h2 class="accordion-header">
+                                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                                          Posso usare questa dashboard da mobile?
+                                        </button>
+                                      </h2>
+                                      <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                                        <div class="accordion-body">Immagino di si, dato che è stata sviluppata utilizzando Bootstrap [mobile first]</div>
+                                      </div>
+                                    </div>
+                                  </div>
+                            </div>
+
+                        </div>
                     </div>
                     <div class="col-12 col-lg-4 p-0 m-0">
                         <!-- 2 cards: to do, graphic -->
+
+                        
                     </div>
                     
                 </div> 
