--- a/index.html
+++ b/index.html
@@ -417,6 +417,29 @@
                         </div>
 
                         <!-- active users card -->
+                        <div class="active_users card mt-3">
+                            <div class="card-body">
+                                <ul class="list-group list-group-flush border rounded-2">
+                                    <li class="list-group-item">
+                                        <img src="./assets/img/stats.jpeg" class="card-img-top img-fluid" alt="...">
+                                        <h4 class="card-title">Utenti attivi </h4>
+                                        <h6>Lista degli utenti attivi in piattaforma nell'ultimo mese</h6>
+                                    </li>
+                                    <li class="list-group-item text-capitalize">
+                                        gennaio: 1200
+                                    </li>
+                                    <li class="list-group-item text-capitalize">
+                                        febbraio: 800
+                                    </li>
+                                    <li class="list-group-item text-capitalize">
+                                        marzo: 1500
+                                    </li>
+                                    <li class="list-group-item text-capitalize">
+                                        <a href="#">Visualizza report approfondito</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
                     
                 </div> 
